Added a movie model to the project

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-336a0172-4aa1-427a-8a8b-705d6b8d665b;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
